--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
             <li>SQL</li>
             <li>PHP</li>
             <li>OWL</li>
+            <li>XML/XSL</li>
         </ul>
         <h3>Outils, environnements</h3>
         <ul>
