--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
     </h2>
     <div id="div1">
         <ul>
-            <li><span class="perso">Situation actuelle </span>: Etudiante en Master 2 Santé Publique mention Systèmes
-                d'Information et
-                Technologies Informatiques pour la Santé (SITIS), en apprentissage avec l'entreprise Orion Heath.</li>
+            <li><span class="perso">Situation actuelle </span>: Business Analyst (Analyste d'affaire) chez Orion Heath.</li>
             <li><span class="perso">Date de naissance </span>: 12 Juillet 1993</li>
-            <li><span class="perso">Lieu d'habitation </span>: Villenave d'Ornon (33140)</li>
+            <li><span class="perso">Lieu d'habitation </span>: Ayguemorte-les-Graves (33640)</li>
         </ul>
         <form class="contact">
             <input class="bouton" type="button" value="Me Contacter par e-mail" onclick="window.location.href='mailto:denet.lola@gmail.com'" />
@@ -56,12 +54,11 @@
     </h2>
     <div id="div2">
         <p>
-            <span class="date"> Depuis Septembre 2021 : </span>
-            Master 2 Santé Publique<br>
+            <span class="date"> Septembre 2022: </span>
+            Diplôme de Master en Santé Publique, major de promotion, mention bien<br>
             <span class="precision">
                 Parcours : Systèmes d'Information et Technologies Informatiques pour la Santé (<a href="http://www.isped.u-bordeaux.fr/FORMATION/Masters-DUs-DIUs/Masters/Master-2-Systèmes-dinformation-et-technologies-informatiques-pour-la-santé"
                     target="blank">SITIS</a>). <br>
-                Année universitaire en cours.<br>
                 Formation effectuée en apprentissage avec l'entreprise Orion Health (plus de détails dans la section <a
                     href="#Exp_pro">Expériences professionnelles et stages</a>).<br><br>
                 Projets de développement dans les domaines suivants : gestion de bases de données (SQL/PHP),
@@ -129,6 +126,14 @@
     </h2>
     <div id="div3">
         <h3>Emplois</h3>
+
+        <p>
+            <span class="date">Depuis Septembre 2022 : </span><br>
+            Business Analyst (Analyste d'affaire)<br>
+            <span class="contrat">Contrat à Durée Indéterminée </span>
+            <span class="precision">Recueil et analyse des besoins client (GRADeS des ARS de France) concernant le développe-ment d'un système d'information en santé, design et spécification fonctionnel, développe-ment, contrôle de conformité, pilotage de projet…</span>
+            <span class="employeur">Orion Health, Gradignan (33170)</span>
+        </p>
 
         <p>
             <span class="date">Août 2019 : </span><br>
@@ -264,7 +269,6 @@
         <ul>
             <li>Systèmes d'exploitation :<span class="divers"> MacOS, Linux</span></li>
             <li>Environnement : <span class="divers">Visual Studio Code</span></li>
-            <li>Traitement d'images : <span class="divers">ImageJ, Gimp</span></li>
             <li>Traitement de données : <span class="divers">R-Studio, PHPmyadmin, DBeaver</span></li>
             <li>Ontologie : <span class="divers">Protégé</span></li>
             <li>Traitement de texte et tableurs : <span class="divers">Overleaf, Microsoft Office, Libre Office, Google
@@ -302,7 +306,7 @@
             <li>Permis B.</li>
             <li>Participation à la nuit de l’informatique en décembre 2019 (Université de Bordeaux).</li>
             <li>Vente à domicile : <span class="divers">Parfumerie (Société Marcus Spurway).</span></li>
-            <li>Centres d'intérêt: <span class="divers">Lecture, Jeux Vidéo, Jeux de Société, cinéma.</span></li>
+            <li>Centres d'intérêt: <span class="divers">Lecture, Jeux Vidéo, Jeux de Société.</span></li>
         </ul>
     </div><br>
 
@@ -323,7 +327,7 @@
     <footer>
         <div>
             Code réalisé selon les recommandations et validé par W3C,
-            <span class="dateW3C">le 23 Janvier 2022</span><br>
+            <span class="dateW3C">le 14 Janvier 2023</span><br>
             En ligne : <a href="https://validator.w3.org" target="blank">Site Web W3C</a><br>
             Tous droits réservés.<br><br>
             <form class="contact">
