--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 Projets de développement dans les domaines suivants : gestion de bases de données (SQL/PHP),
                 programmation orientée objet (Java), intégration secondaire de données (SQL/PHP), indexation et fouille
                 de texte (Python), ontologie et terminologie (OWL/Logique de description), aide à la décision (R/IA).<br><br>
-                Projet de recherhe en sécurité informatique.<br><br>
+                Projet de recherche en sécurité informatique.<br><br>
                 Autres domaines étudiés : gestion de projet, épidémiologie, interopérabilité, systèmes d'information en
                 santé et pilotage, contraintes homme-machine en informatique de santé.<br><br>
                 Rôle de chef de projet occupé à plusieurs reprises. <br><br>
@@ -131,7 +131,7 @@
             <span class="date">Depuis Septembre 2022 : </span><br>
             Business Analyst (Analyste d'affaire)<br>
             <span class="contrat">Contrat à Durée Indéterminée </span>
-            <span class="precision">Recueil et analyse des besoins client (GRADeS des ARS de France) concernant le développe-ment d'un système d'information en santé, design et spécification fonctionnel, développe-ment, contrôle de conformité, pilotage de projet…</span>
+            <span class="precision">Recueil et analyse des besoins client (GRADeS des ARS de France) concernant le développement d'un système d'information en santé, conception et spécifications fonctionnelles, développement, contrôle de conformité, pilotage de projet…</span>
             <span class="employeur">Orion Health, Gradignan (33170)</span>
         </p>
 
