--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="Mon CV" />
-    <meta name="keywords" content="Curriculum Vitae, Bio-Informatique" />
-    <meta name="author" content="Denet Lola" />
-    <link rel="stylesheet" href="Style/CV_perso.css" />
-    <!--<link rel="stylesheet" href="Style/print.css" media="print"/>-->
+    <meta charset="utf-8">
+    <meta name="description" content="Mon CV">
+    <meta name="keywords" content="Curriculum Vitae, Bio-Informatique">
+    <meta name="author" content="Denet Lola">
+    <link rel="stylesheet" href="Style/CV_perso.css">
+    <!--<link rel="stylesheet" href="Style/print.css" media="print">-->
     <title>Curriculum Vitae</title>
 </head>
 
@@ -27,7 +27,7 @@
     </div>
     
     <div id="nom_photo">
-    <img class="photo" src="Images/Photo_LolaDenet.jpg" alt="Photo d'identité" />
+    <img class="photo" src="Images/Photo_LolaDenet.jpg" alt="Photo d'identité" >
 
     </div>
     <h1>Curriculum Vitae</h1>
@@ -43,7 +43,7 @@
             <li><span class="perso">Lieu d'habitation </span>: Ayguemorte-les-Graves (33640)</li>
         </ul>
         <form class="contact">
-            <input class="bouton" type="button" value="Me Contacter par e-mail" onclick="window.location.href='mailto:denet.lola@gmail.com'" />
+            <input class="bouton" type="button" value="Me Contacter par e-mail" onclick="window.location.href='mailto:denet.lola@gmail.com'">
         </form><br>
     </div>
     <a class="haut" href="#Haut">Haut de page</a>
@@ -288,11 +288,11 @@
         <button onclick="aff_masq('div5')">+/-</button>
     </h2>
     <div class="div_langue" id="div5">
-        <img class="logoFr" src="Images/francais.png" alt="Drapeau Français" />
+        <img class="logoFr" src="Images/francais.png" alt="Drapeau Français">
         <span class="langue">Français : langue maternelle</span><br><br>
-        <img class="logoEn" src="Images/anglais.png" alt="Drapeau Anglais" />
+        <img class="logoEn" src="Images/anglais.png" alt="Drapeau Anglais">
         <span class="langue">Anglais : Niveau B2</span><br><br>
-        <img class="logoSp" src="Images/espagnol.png" alt="Drapeau Espagnol" />
+        <img class="logoSp" src="Images/espagnol.png" alt="Drapeau Espagnol">
         <span class="langue">Espagnol : Niveau A2</span><br><br>
     </div><br>
     <a class="haut" href="#Haut">Haut de page</a>
@@ -311,7 +311,7 @@
 
     <div>
         <form>
-            <!--<input class="impression" type="button" onclick="imprimer_page()" value="Imprimer le CV"/>-->
+            <!--<input class="impression" type="button" onclick="imprimer_page()" value="Imprimer le CV">-->
             <a class="telecharger" id="cv1" href="./CV_LolaDENET.pdf" target="blank" download="CV_LolaDENET.pdf">Télécharger le
                 CV synthétisé (1 page)</a>
             <a class="telecharger" id="cv2" href="./CV_LolaDENET_complet.pdf" target="blank" download="CV_LolaDENET_complet.pdf">Télécharger
@@ -330,7 +330,7 @@
             En ligne : <a href="https://validator.w3.org" target="blank">Site Web W3C</a><br>
             Tous droits réservés.<br><br>
             <form class="contact">
-                <input class="bouton" type="button" value="Me Contacter par e-mail" onclick="window.location.href='mailto:denet.lola@gmail.com'" />
+                <input class="bouton" type="button" value="Me Contacter par e-mail" onclick="window.location.href='mailto:denet.lola@gmail.com'">
             </form><br>
         </div>
     </footer>
