--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <footer>
         <div>
             Code réalisé selon les recommandations et validé par W3C,
-            <span class="dateW3C">le 14 Janvier 2023</span><br>
+            <span class="dateW3C">le 20 Août 2024</span><br>
             En ligne : <a href="https://validator.w3.org" target="blank">Site Web W3C</a><br>
             Tous droits réservés.<br><br>
             <form class="contact">
