--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Mon CV">
-    <meta name="keywords" content="Curriculum Vitae, Bio-Informatique">
+    <meta name="keywords" content="Curriculum Vitae, Bio-Informatique, e-santé, Business analyst">
     <meta name="author" content="Denet Lola">
     <link rel="stylesheet" href="Style/CV_perso.css">
     <!--<link rel="stylesheet" href="Style/print.css" media="print">-->
@@ -268,7 +268,7 @@
         <h3>Outils, environnements</h3>
         <ul>
             <li>Systèmes d'exploitation :<span class="divers"> MacOS, Linux</span></li>
-            <li>Environnement : <span class="divers">Visual Studio Code</span></li>
+            <li>Outils : <span class="divers">Visual Studio Code, JIRA, Redmine, Confluence</span></li>
             <li>Traitement de données : <span class="divers">R-Studio, PHPmyadmin, DBeaver</span></li>
             <li>Ontologie : <span class="divers">Protégé</span></li>
             <li>Traitement de texte et tableurs : <span class="divers">Overleaf, Microsoft Office, Libre Office, Google
@@ -305,7 +305,8 @@
         <ul>
             <li>Permis B.</li>
             <li>Participation à la nuit de l’informatique en décembre 2019 (Université de Bordeaux).</li>
-            <li>Centres d'intérêt: <span class="divers">Lecture, Jeux Vidéo, Jeux de Société.</span></li>
+            <li>Membre active d'une association de médiation culturelle (administration, commissions, bénévolat)</li>
+            <li>Centres d'intérêt: <span class="divers">Lecture, Jeux Vidéo, Jeux de Société, Associatif.</span></li>
         </ul>
     </div><br>
 
@@ -326,7 +327,7 @@
     <footer>
         <div>
             Code réalisé selon les recommandations et validé par W3C,
-            <span class="dateW3C">le 20 Août 2024</span><br>
+            <span class="dateW3C">le 25 Novembre 2024</span><br>
             En ligne : <a href="https://validator.w3.org" target="blank">Site Web W3C</a><br>
             Tous droits réservés.<br><br>
             <form class="contact">
